# agu3rra.github.io

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
blog/pragmaticST/article/: index.html
blog/proxyIos13/article/: index.html
blog/pythonCustomsCAs/article/: index.html
blog/tlsHandshake/article/: index.html
blog/vulnsOSS/article/: index.html
dev/netrc/: index.html
docs/: about.md  index.md
docs/blog/: proxyIos13.md  pythonCustomsCAs.md  tlsHandshake.md
docs/blog/pragmaticST/: article.md
docs/blog/proxyIos13/: article.md
docs/blog/vulnsOSS/: article.md
docs/dev/: netrc.md
docs/projects/volpy/: index.md  methodology.md
docs/security/pragmaticST/: article.md
docs/security/pythonCustomsCAs/: article.md
docs/security/tlsHandshake/: article.md
includes/: abbreviations.md
projects/volpy/: index.html
projects/volpy/methodology/: index.html
search/: search_index.json
security/pragmaticST/article/: index.html
security/proxyIos13/article/: index.html
security/pythonCustomsCAs/article/: index.html
security/tlsHandshake/article/: index.html
security/vulnsOSS/article/: index.html
